<resources>
    <string name="app_name">MTG Collection Manager</string>
    <string name="card_name">Card Name</string>
    <string name="cmc">CMC</string>
    <string name="types">Types</string>
    <string name="power">Power</string>
    <string name="subtypes">Subtypes</string>
    <string name="toughness">Toughness</string>
    <string name="text">Text</string>
    <string name="color">Color</string>
    <string name="checkbox_background_description">An image of a mana symbol that sits behind the appropriate check box</string>
    <string name="color_identity">Color Identity</string>
    <string name="search">Search</string>
    <string name="collection_only">Collection Only</string>
    <string name="update">Update</string>
    <string name="collection">Collection</string>
    <string name="name">Name</string>
    <string name="stats">Stats</string>
    <string name="quantity">Quantity</string>
    <string name="collection_quantity">Collection</string>
    <string name="qty">Qty</string>
    <string name="decks">Decks</string>
    <string name="plus">+</string>
    <string name="deck_quantity">Deck</string>
    <string name="deck_name">New Deck Name</string>
    <string name="minus">-</string>
    <string name="quantities">Quantities</string>
    <string name="deck">Deck</string>
</resources>
